@@ -10,11 +10,11 @@ import Editor from 'tinymce/core/api/Editor';
 import { BlobInfo } from 'tinymce/core/api/file/BlobCache';
 import { StyleMap } from 'tinymce/core/api/html/Styles';
 import { Dialog as DialogType } from 'tinymce/core/api/ui/Ui';
-
+import ImageUploader, { UploadResult } from 'tinymce/core/api/util/ImageUploader';
+import Promise from 'tinymce/core/api/util/Promise';
 import { getStyleValue, ImageData } from '../core/ImageData';
 import { normalizeCss as doNormalizeCss } from '../core/ImageSelection';
 import { ListUtils } from '../core/ListUtils';
-import Uploader from '../core/Uploader';
 import * as Utils from '../core/Utils';
 import { AdvTab } from './AdvTab';
 import { collect } from './DialogInfo';
@@ -40,6 +40,7 @@ interface Helpers {
   normalizeCss: (cssText: string) => string;
   parseStyle: (cssText: string) => StyleMap;
   serializeStyle: (stylesArg: StyleMap, name?: string) => string;
+  uploadImage: (blobInfo: BlobInfo) => Promise<UploadResult>;
 }
 
 interface ImageDialogState {
@@ -269,14 +270,6 @@ const changeFileInput = (helpers: Helpers, info: ImageDialogInfo, state: ImageDi
       api.unblock();
     }, (file) => {
       const blobUri: string = URL.createObjectURL(file);
-
-      const uploader = Uploader({
-        url: info.url,
-        basePath: info.basePath,
-        credentials: info.credentials,
-        handler: info.handler
-      });
-
       const finalize = () => {
         api.unblock();
         URL.revokeObjectURL(blobUri);
@@ -291,8 +284,8 @@ const changeFileInput = (helpers: Helpers, info: ImageDialogInfo, state: ImageDi
       Utils.blobToDataUri(file).then((dataUrl) => {
         const blobInfo = helpers.createBlobCache(file, blobUri, dataUrl);
         if (info.automaticUploads) {
-          uploader.upload(blobInfo).then((url: string) => {
-            updateSrcAndSwitchTab(url);
+          helpers.uploadImage(blobInfo).then((result) => {
+            updateSrcAndSwitchTab(result.url);
             finalize();
           }).catch((err) => {
             finalize();
@@ -416,6 +409,16 @@ const parseStyle = (editor: Editor) => (cssText: string): StyleMap => editor.dom
 
 const serializeStyle = (editor: Editor) => (stylesArg: StyleMap, name?: string): string => editor.dom.serializeStyle(stylesArg, name);
 
+const uploadImage = (editor: Editor) => (blobInfo: BlobInfo) => ImageUploader(editor).upload([ blobInfo ], false).then((results) => {
+  if (results.length === 0) {
+    return Promise.reject('Failed to upload image');
+  } else if (results[0].status === false) {
+    return Promise.reject(results[0].error);
+  } else {
+    return results[0];
+  }
+});
+
 export const Dialog = (editor: Editor) => {
   const helpers: Helpers = {
     onSubmit: submitHandler(editor),
@@ -425,7 +428,8 @@ export const Dialog = (editor: Editor) => {
     alertErr: alertErr(editor),
     normalizeCss: normalizeCss(editor),
     parseStyle: parseStyle(editor),
-    serializeStyle: serializeStyle(editor)
+    serializeStyle: serializeStyle(editor),
+    uploadImage: uploadImage(editor)
   };
   const open = () => {
     collect(editor)
